# metagraphed

./: .dockerignore  .loopover.yml  .prettierignore  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  after-activity-hash.webm  after-heatmap-kbd.webm  after-heatmap-keyboard.webm  after-neuron-row-kbd.webm  after-sparkline-kbd.webm  after.webm  before-activity-hash.webm  before-heatmap-kbd.webm  before-heatmap-keyboard.webm  before-neuron-row-kbd.webm  before-sparkline-kbd.webm  before.webm  eslint.config.mjs  package-lock.json  package.json  release-notes.md  release-please-config.json  server.json  tsconfig.json  vitest.config.mjs  wrangler.data.jsonc  wrangler.jsonc  wrangler.registry.jsonc
apps/indexer-rs/: Cargo.toml
deploy/: README.md  chain-firehose-relay.Dockerfile  economics-refresh.Dockerfile  indexer.railway.json  metagraph-fetch.Dockerfile  streamer.Dockerfile
docs/: apex-agent-discovery.md  api-stability.md  backend-artifact-contracts.md  block-explorer-data-model.md  curation-playbook.md  domains.md  realtime-firehose.md  realtime-streamer.md  typescript-migration-checklist.md  vision.md
migrations/: .gitkeep  0007_neurons.sql  0010_perf_indexes.sql  0011_neuron_daily.sql  0013_blocks.sql  0014_extrinsics.sql  0025_account_events_daily_hotkey_day.sql  0042_neurons_take.sql  0043_validator_nominator_counts.sql
public/: agent.md  llms-full.txt  llms.txt
python/: CHANGELOG.md  pyproject.toml
registry/: lineage.json
schemas/: api-components.schema.json  provider.schema.json  subnet-manifest.schema.json
(+810 files in other folders)
